fixed the layout issue

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -365,7 +365,7 @@ sampleSection
                     li {
                         display: inline-block;
                         padding: 3%;
-                        // padding-left: 0;
+                        padding-left: 0;
                         font-size: 1.5rem;
                         a {
                             .icon {
